docs: record the changes since 2026-08-06 in the changelog